# NetRecon

./: .dockerignore  .env.example  .gitignore  CODEBASE_ANALYSIS_REPORT.md  Dockerfile  LICENSE.txt  NetLogic_IEEE_Paper.docx  NetLogic_IEEE_Paper_v2.docx  README.md  SECURITY.md  build.bat  cve_correlator.py  docker-compose.yml  index.html  installer.nsi  main.js  netlogic.py  netlogic.spec  netlogic_agent.py  netlogic_engine.spec  netrecon.py  netrecon_engine.spec  nvd_lookup.py  osint.py  package-lock.json  package.json  preload.js  pyproject.toml  requirements-api.txt  requirements-dev.txt  scanner.py  takeover.py  test_agent_architecture.py  test_api_advanced.py  test_auth_multitenancy.py  test_netlogic.py  test_netrecon.py  test_production_readiness.py  tls_analyzer.py  version_info.txt
.github/workflows/: ci.yml
api/: cli.py  main.py
api/agents/: local_agent.py  registry.py
api/auth/: api_keys.py  dependencies.py  jwt_handler.py  license.py  rate_limit.py
api/jobs/: executor.py  manager.py
api/middleware/: audit.py
api/models/: agent.py  scan_request.py
api/routes/: agents.py  auth.py  health.py  jobs.py  license.py  scans.py  vdb.py
api/storage/: json_store.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
dashboard/src/: App.tsx  index.css  main.tsx
electron/: main.js  preload.js
renderer/: index.html
src/: cve_correlator.py  dns_security.py  header_audit.py  json_bridge.py  nvd_lookup.py  osint.py  reporter.py  scanner.py  stack_fingerprint.py  takeover.py  tls_analyzer.py  vuln_prober.py
(+15 files in other folders)
